src/Components/Root/TimeLine/TimeLine.less
/* Imports */

@import '../../Root/Root.less';

/* Variables */

@padding: 35px;
@iconSize: 18px;

/* Style definitions */

.TimeLine
{
	padding-bottom: @padding;

	table
	{
		width: 100%;
		border-collapse: collapse;

		tr
		{
			&:last-child
			{
				.left,
				.right
				{
					padding-bottom: 0px;
				}
			}

			td
			{
				position: relative;
				width: 50%;
				padding-bottom: @padding;

				&.left
				{
					padding-right: @padding;
					border-right: 4px solid @green;

					.icon
					{
						right: -18px;
					}
				}

				&.right
				{
					padding-left: @padding;
					border-left: 4px solid @green;

					.icon
					{
						left: -18px;
					}
				}

				.icon
				{
					position: absolute;
					top: 50%;
					display: block;
					width: @iconSize;
					height: @iconSize;
					padding: 7px;
					margin-top: -(@iconSize + @padding / 2);
					text-align: center;
					color: @white;
					border-radius: 50px;
					background: @green;
				}

				.block
				{
					margin: 0px;
					padding: 20px;

					p
					{
						margin: 0px;

						&:not(:last-child)
						{
							margin-bottom: 10px;
						}

						span
						{
							padding: 1px;

							&.name
							{
								color: @blue;
								font-size: @fontSizeLarge;
								font-weight: bold;
							}

							&.school,
							&.company
							{
								color: @black;
								font-size: @fontSizeLarge;
								font-weight: bold;

								a
								{
									color: @blackSemiTransparentMedium;
								}
							}

							&.location
							{
								color: @blackSemiTransparentMedium;
								font-size: @fontSizeSmall;
							}
						}

						&.note
						{
							color: @orange;
						}
					}

					ul
					{
						list-style: none;
						padding: 0px;
						margin: 0px;

						li
						{
							padding-left: 5px;
							margin: 5px 5px 5px 0px;
							border-left: 2px solid fade(@orange, 20%);
							transition: all @transitionDuration;

							&:hover
							{
								border-left: 2px solid @orange;
							}

							&.toggleAction
							{
								color: @blue;
								text-align: center;
								border: none;

								&:hover
								{
									color: @green;
								}
							}
						}
					}
				}
			}
		}
	}
}

